# amy

./: .env.example  .gitignore  README.md  pyproject.toml
config/: project_context.md
memory/: memory.md
scripts/: amy
src/agents/: __init__.py  base.py  cli.py  registry.py
src/agents/amy/: __init__.py  agent.py  config.py  controller.py  protocols.py
src/agents/amy/context/: __init__.py  pipeline.py  prompts.py
src/agents/amy/conversation/: __init__.py  controller.py  session.py  side_effects.py
src/agents/amy/core/: __init__.py  controller.py  models.py  prompts.py  protocols.py
src/agents/amy/memory/: __init__.py  classifier.py  memory.md  models.py  store.py
src/agents/amy/modalities/audio/: __init__.py  capture.py  models.py  segmenter.py  transcription.py  tts.py
src/agents/amy/runtime/: __init__.py  assistant.py  status.py
src/agents/amy/skills/: registry.py
src/agents/amy/skills/browser/: __init__.py  duckduckgo.py  models.py  search.py
src/agents/amy/understanding/: __init__.py  interpreter.py
src/agents/providers/: __init__.py  openai.py
src/amy/: __init__.py  audio.py  cli.py  config.py  context.py  controller.py  memory.py  models.py  openai_service.py  runtime.py  transcription.py  tts.py  web_search.py
tests/: test_audio.py  test_cli.py  test_config.py  test_context.py  test_controller.py  test_memory.py  test_runtime.py  test_skill_registry.py  test_status_reporter.py
